fix(profile): remove password fields, password reset is handled separately - Remove "Mật khẩu mới" and "Xác nhận mật khẩu" from profile form - Users should use dedicated password reset page instead - Add required validation for address fields
Closes #61